# jean-claude

./: .env.example  .gitignore  DEVIS-2026-001-charles-dupont.md  DEVIS-2026-002-simon-rowell.md  PROJECT_PLAN.md  README.md  devis.css  devis.template.html  info-compagnie-test.md  info-compagnie.md  new-quote-fr.md  pyproject.toml  render_devis_pdf.py  template-devis.md
docs/: PROMPTS_V1.md
prompts/: system.md
prompts/base/: jeanclaude.md  policies.md
prompts/flows/: chat.yaml  onboarding.yaml  refine_recs.yaml
prompts/modes/: chat.md  download.md  library.md  onboarding.md  recommend.md
prompts/schemas/: recs.json  turn.chat.json  turn.onboarding.json
prompts/skills/: catalog.yaml
prompts/tools/: bash.md  catalog.yaml
src/jean_claude/: __init__.py  cli.py  config.py  errors.py
src/jean_claude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/jean_claude/agent/: __init__.py  orchestrator.py  prompt_builder.py  session.py  state_machine.py
src/jean_claude/auth/: __init__.py  openai_codex_oauth.py  store.py
src/jean_claude/chat/: __init__.py  session.py
src/jean_claude/conversation/: __init__.py  engine.py
src/jean_claude/llm/: base.py  mock.py  openai_codex.py
src/jean_claude/prefs/: store.py  (+3 more)
tests/: test_agent_orchestrator.py  test_bash_tool.py  test_chat_session.py  test_cli.py  test_conversation_engine.py  test_mock_client.py  test_oauth_helpers.py  test_openai_codex_client.py  test_prefs_interview.py  test_prefs_profile.py  test_prompt_pack_layout.py  test_prompt_repository.py  test_prompts_v1.py  test_tools_policy.py
(+9 files in other folders)
